--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "react": "^18.2.0",
+    "react-device-emulator": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
   },
