--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "firebase": "^9.20.0",
     "react": "^18.2.0",
     "react-device-emulator": "^1.1.2",
     "react-dom": "^18.2.0",
