--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "miris-aaaaa",
+    "default": "testmigu-8bd73",
     "test": "migu-test",
     "prod": "projectmigu-af702",
     "miris": "miris-aaaaa"
