--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,11 @@
 {
   "projects": {
-    "default": "testmigu-8bd73",
+    "default": "projectmigu-af702",
     "test": "migu-test",
     "prod": "projectmigu-af702",
-    "miris": "miris-aaaaa"
-  }
+    "miris": "miris-aaaaa",
+    "migutest": "migu-test"
+  },
+  "targets": {},
+  "etags": {}
 }
