--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-device-emulator": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "styled-components": "^5.3.11",
     "tedious": "^16.0.0",
     "uuid": "^9.0.0"
   },
